# -ALK-RECON_repo_cbio_ids_rnaseq

./: .gitignore  README.md  pyproject.toml  pyright_report.txt  pytest_errors.txt  pytest_errors_full.txt
alk_recon/: __init__.py  cli.py  pipeline.py
alk_recon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/persistence_signatures/: example_persister_genes.txt
docs/: README_cbioportal_swap.md  README_ingest_internals.md  README_pytest_regression.md  README_quickstart.md  README_test_data.md
examples/: rnaseq_counts_example.tsv  rnaseq_meta_example.tsv  variant_table_template.tsv
features/: __init__.py  alk_flags.py  apply_features.py  bypass_flags.py  persistence_flags.py
ingest/: cna_import.py  rnaseq_import.py  variant_table_import.py
llm_layer/: narrator.py
mechanism_engine/: rule_engine.py
reports/: dossier.py
schema/: case_snapshot.py
tests/: conftest.py  test_cli.py  test_dossier_integrity.py  test_flags.py  test_ingest_variants.py  test_regression_rnaseq_no_nan.py  test_rnaseq_attach.py  test_rule_engine.py  test_smoke.py  test_tcga_smoke_filtered.py
tests/data/: expression_sample.tsv  rnaseq_counts_test.tsv  rnaseq_meta_test.tsv  variants_sample.tsv  variants_sample_noexpr.tsv
tools/: cbioportal_bundle_to_variants.py  dump_vscode_problems.py  prep_linkedomics_expression.py  prep_tcga_luad_rnaseq.py
